# pdf-parser

./: errors.csv  parse_policy.py  pyproject.toml  setup.py
parsers/: __init__.py  base.py  icici_lombard.py  new_india.py  reader.py  regex_parser.py  sbi.py
